<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/layout"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FindServer">



    <Button
        android:onClick="connectToServer"
        android:layout_marginTop="5dp"
        android:id="@+id/connect"
        android:text="@string/labelConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_marginTop="10dp"
        android:id="@+id/radioGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:enabled="true"
            android:id="@+id/color1"
            android:text="@string/color1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:enabled="true"
            android:text="@string/color2"
            android:id="@+id/color2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:enabled="true"
        android:onClick="setColor"
        android:text="@string/setCol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cajita"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:enabled="true"
        android:onClick="setQuantity"
        android:text="SET_CANTIDAD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:enabled="true"
        android:onClick="start"
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:enabled="true"
        android:onClick="test"
        android:text="@string/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
